--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
       const config = { 
         fps: 10, 
         qrbox: 300,
+    showZoomSliderIfSupported: true,
+    // Optional: Set a default zoom value (e.g., 2x zoom)
+    defaultZoomValueIfSupported: 2
+
         // The following option is experimental and may be subject to change in future releases.
         formatsToSupport: [
           Html5QrcodeSupportedFormats.CODE_128,
