--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes</h2>
+  <h2>Scan Item & Serial Barcodes2</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
