--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes2</h2>
+  <h2>Scan Item & Serial Barcodes 3</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -63,7 +63,7 @@
         {
           fps: 10,
           qrbox: { width: 300, height: 130 },
-	  aspectRatio: isIOS ? 1.5 : 0,
+	  aspectRatio:  1.5 : 0,
           showTorchButtonIfSupported: true,
           showZoomSliderIfSupported: true,
 	  useBarCodeDetectorIfSupported: true,
