--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 6</h2>
+  <h2>Scan Item & Serial Barcodes 7</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -66,7 +66,7 @@
          width: 1920,
          height: 1080,
          facingMode: "environment",
-         // qrbox: { width: 400, height: 400 },
+          qrbox: { width: 400, height: 400 },
 
         },
         (decodedText) => {
