--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 8</h2>
+  <h2>Scan Item & Serial Barcodes 9</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -63,7 +63,8 @@
         {
           fps: 10,
           facingMode: "environment",
-          qrbox: { width: 1000, height: 1000 },
+          qrbox: 250 ,
+	 focusMode" "continuous"
 
         },
         (decodedText) => {
