--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 9</h2>
+  <h2>Scan Item & Serial Barcodes 10</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -64,7 +64,7 @@
           fps: 10,
           facingMode: "environment",
           qrbox: 250 ,
-	 focusMode" "continuous"
+	 focusMode: "continuous"
 
         },
         (decodedText) => {
