--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 17</h2>
+  <h2>Scan Item & Serial Barcodes 18</h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -63,6 +63,7 @@
         {
           fps: 2,
           qrbox: 300 ,
+	aspectRatio?: 16:9 ,
 	 focusMode: "continuous"
 
         },
