--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 5.2 -5 </h2>
+  <h2>Scan Item & Serial Barcodes 5.2 -6 </h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -64,7 +64,7 @@
           const width = window.innerWidth
           const height = window.innerHeight
           const aspectRatio = width / height
-
+	  const reverseAspectRatio = height / width
 
 const mobileAspectRatio = reverseAspectRatio > 1.5
             ? reverseAspectRatio + (reverseAspectRatio * 12 / 100)
