--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>Scan Item & Serial Barcodes 5.2 14 </h2>
+  <h2>Scan Item & Serial Barcodes 5.2 16 </h2>
   <div class="controls">
     <br>
     <label for="zoomRange">Adjust Zoom:</label>
@@ -79,7 +79,13 @@ const config = {
             videoConstraints: {
 		showZoomSliderIfSupported: true,
 focusMode: "continuous",
-          advanced: [{ zoom: 4.0 }],
+
+ showTorchButtonIfSupported: true,
+              rememberLastUsedCamera: true,
+              useBarCodeDetectorIfSupported: true,
+
+          advanced: [{ zoom: 2.0 }],
+focusDistance : [{ focusDistance: 1 }],
               facingMode: 'environment',
               aspectRatio: width < 600
                 ? mobileAspectRatio
