--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
   <div class="controls">
-Barcode with Zoom v5.5
+Ambient Barcode Inventory Count v5.5
     <div class="zoom-controls">
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
@@ -226,16 +226,6 @@ async function saveToGoogleSheets() {
                 alert('Save failed. Check console.');
             }
         }
-
-
-
-
-
-
-
-
-
-
 
 
   </script>
