--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <body>
 
   <div class="controls">
-    Ambient Barcode Inventory Count v6.5
+    Ambient Barcode Inventory Count v5.5
     <div class="zoom-controls">
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
       <div id="cameraInfo"></div>
-      <button onclick="clearFields()">Clear All Fields</button>
+      <button onclick="clearFields()">Clear Fields</button>
       <button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
       <button onclick="saveToGoogleSheets()">Save !!!</button>
   </div>
