--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barcode Scanner with Zoom & Manual Entry Toggle</title>
+  <title>Barcode Scanner with Zoom & Manual Entry Toggle & Save Counter</title>
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   <style>
     body {
@@ -46,6 +46,10 @@
       padding: 8px 12px;
       cursor: pointer;
     }
+    #saveCounterDisplay {
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -56,12 +60,11 @@
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
       <div id="cameraInfo"></div>
-      <button onclick="clearFields()">Clear Fields</button>
-      <button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
-      <button onclick="saveToGoogleSheets()">Save !!!</button>
-<!-- Display the counter for successful saves -->
+      <button onclick="clearFields()">Clear All Fields</button>
+<button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
+      <button onclick="saveToGoogleSheets()"> Save !!! </button>
+      <!-- Display the counter for successful saves -->
       <div id="saveCounterDisplay">Submitted Count: <span id="saveCounter">0</span></div>
-  </div>
     </div>
   </div>
 
@@ -80,7 +83,7 @@
     <input type="text" id="serialBarcode" placeholder="Serial Barcode" readonly>
   </div>
 
-
+ 
 
   <div id="reader"></div>
 
@@ -89,6 +92,8 @@
     let currentZoom = 1;
     let videoTrack = null;
     let currentTarget = null;
+    // Global counter for successful saves
+    let successfulSaveCount = 0;
 
     async function startItemScan() {
       currentTarget = 'itemBarcode';
@@ -237,7 +242,7 @@
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ item, serial, quantity, timestamp: new Date().toISOString() })
           });
-           alert('Data saved!');
+          alert('Data saved!');
           // Increment the counter and update display
           successfulSaveCount++;
           document.getElementById("saveCounter").textContent = successfulSaveCount;
