--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
       <div id="cameraInfo"></div>
-      <button onclick="clearFields()">Clear All Fields</button>
+      <button onclick="clearFields()">Clear Fields</button>
 <button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
       <button onclick="saveToGoogleSheets()">Save !!!</button>
       <!-- Display the counter for successful saves -->
