--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barcode Scanner with Zoom & Manual Entry Toggle & Save Counter</title>
+  <title>Barcode Scanner with Zoom, Manual Entry Toggle, and Save Counter</title>
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   <style>
     body {
@@ -42,6 +42,11 @@
       gap: 10px;
       align-items: center;
     }
+    /* Custom class to increase text size for barcode inputs */
+    .barcode-input {
+      font-size: 20px;
+      padding: 5px;
+    }
     button {
       padding: 8px 12px;
       cursor: pointer;
@@ -55,13 +60,13 @@
 <body>
 
   <div class="controls">
-    Ambient Barcode Inventory Count v6.5
+    Ambient Barcode Inventory Count v5.5
     <div class="zoom-controls">
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
       <div id="cameraInfo"></div>
       <button onclick="clearFields()">Clear Fields</button>
-<button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
+ <button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
       <button onclick="saveToGoogleSheets()">Save !!!</button>
       <!-- Display the counter for successful saves -->
       <div id="saveCounterDisplay">Submitted Count: <span id="saveCounter">0</span></div>
@@ -75,15 +80,15 @@
 
   <div class="scan-section">
     <button onclick="startItemScan()">Scan Item</button>
-    <input type="text" id="itemBarcode" placeholder="Item Barcode" readonly>
+    <input type="text" id="itemBarcode" placeholder="Item Barcode" readonly class="barcode-input">
   </div>
 
   <div class="scan-section">
     <button onclick="startSerialScan()">Scan Serial</button>
-    <input type="text" id="serialBarcode" placeholder="Serial Barcode" readonly>
+    <input type="text" id="serialBarcode" placeholder="Serial Barcode" readonly class="barcode-input">
   </div>
 
- 
+
 
   <div id="reader"></div>
 
