--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
   </div>
 
   <div class="scan-section">
-    <button onclick="startItemScan()">Scan Item</button>
+    <button onclick="startItemScan()">Item</button>
     <input type="text" id="itemBarcode" placeholder="Item Barcode" readonly class="barcode-input">
   </div>
 
   <div class="scan-section">
-    <button onclick="startSerialScan()">Scan Serial</button>
+    <button onclick="startSerialScan()">Serial</button>
     <input type="text" id="serialBarcode" placeholder="Serial Barcode" readonly class="barcode-input">
   </div>
 
