--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     }
     .zoom-controls {
       background: #f5f5f5;
-      padding: 15px;
+      padding: 5px;
       border-radius: 8px;
+ font-size: 15px;
+ 
     }
     input[type="range"] {
       width: 200px;
