--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div id="cameraInfo"></div>
       <button onclick="clearFields()">Clear Fields</button>
  <button id="toggleManual" onclick="toggleManualEntry()">Enable Manual Entry</button>
-      <button onclick="saveToGoogleSheets()">Save !!!</button>
+      <button onclick="saveToGoogleSheets()">Save Record!!!</button>
       <!-- Display the counter for successful saves -->
       <div id="saveCounterDisplay">Submitted Count: <span id="saveCounter">0</span></div>
     </div>
