--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+     font-weight: bold;
     }
     .zoom-controls {
       background: #f5f5f5;
