--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       display: flex;
       gap: 10px;
       align-items: center;
+     font-weight: bold;
     }
     /* Custom class to increase text size for barcode inputs */
     .barcode-input {
