--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 </head>
 <body>
   <div class="controls">
-    <h1>Ambient Barcode Inventory Count v7.0</h1>
+
+Ambient Barcode Inventory Count v7.0
+
+
     <div class="zoom-controls">
       <label>Zoom: <span id="zoomValue">1</span>x</label>
       <input type="range" id="zoomRange" min="1" max="20" step="0.1" value="1" disabled>
@@ -367,6 +370,7 @@
     }
 
     function toggleManualEntry() {
+stopScanner()
       const itemInput = document.getElementById("itemBarcode");
       const serialInput = document.getElementById("serialBarcode");
       const toggleButton = document.getElementById("toggleManual");
