--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ Ambient Barcode Inventory Count v7.0
     }
 
     function toggleManualEntry() {
-stopScanner()
+      stopScanner();
       const itemInput = document.getElementById("itemBarcode");
       const serialInput = document.getElementById("serialBarcode");
       const toggleButton = document.getElementById("toggleManual");
