--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       margin: 10px 0;
       display: flex;
       gap: 10px;
-      align-items: center;
+      align-items: right;
       font-weight: bold;
     }
     .barcode-input {
@@ -291,6 +291,7 @@ Ambient Barcode Inventory Count v7.0
     }
 
     function handleScanResult(decodedText) {
+  stopScanner();
       if (currentTarget) {
         document.getElementById(currentTarget).value = decodedText;
         document.getElementById(`${currentTarget}Error`).textContent = '';
