--- a/16.html
+++ b/16.html
@@ -105,7 +105,7 @@
         const errorMessage = document.getElementById("errorMessage");
         const infoLink = document.getElementById("infoLink");
 
-        let model, capturedImage;
+        let model, capturedImage, stream;
 
         // Load the MobileNet model
         async function loadModel() {
@@ -129,7 +129,7 @@
                         height: { ideal: 720 }
                     }
                 };
-                const stream = await navigator.mediaDevices.getUserMedia(constraints);
+                stream = await navigator.mediaDevices.getUserMedia(constraints);
                 video.srcObject = stream;
             } catch (error) {
                 console.error("Error accessing camera:", error);
@@ -139,6 +139,14 @@
 
         // Start the camera on page load
         startCamera();
+
+        // Function to stop camera when processing
+        function stopCamera() {
+            if (stream) {
+                stream.getTracks().forEach(track => track.stop()); // Stop all tracks
+                video.srcObject = null; // Remove the video source
+            }
+        }
 
         // Capture image from video (only one capture at a time)
         captureButton.addEventListener("click", () => {
@@ -186,6 +194,9 @@
             }
 
             loadingStatus.textContent = "Processing image...";
+            processButton.disabled = true;
+            captureButton.disabled = true;
+            stopCamera(); // Disable camera when processing
 
             // Create an image element to classify
             const imgElement = new Image();
@@ -214,9 +225,13 @@
                         predictionCell.textContent = pred.className;
                         probabilityCell.textContent = (pred.probability * 100).toFixed(2) + "%";
                     });
+
                 } catch (error) {
                     console.error("Error during image classification:", error);
                     loadingStatus.textContent = "Error processing image.";
+                } finally {
+                    processButton.disabled = false;
+                    captureButton.disabled = false;
                 }
             };
         });
