--- a/chat13.html
+++ b/chat13.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +16,7 @@
         button:hover { background: #0056b3; }
         #preview {
             display: none;
-            width: 200px;
+            width: 300;
             height: auto;
             border-radius: 16px;
             margin: 15px auto;
