--- a/chat28.html
+++ b/chat28.html
@@ -224,7 +224,7 @@
 <body>
   <div class="container">
     <div class="header-container">
-      <h1>🤖 HVAC Technician Assistant</h1>
+      <h1>🤖 HVAC Tech Assistant</h1>
       <button id="micButton" onclick="startVoiceInput()" aria-label="Start voice input">🎙️</button>
     </div>
 
