--- a/chat28.html
+++ b/chat28.html
@@ -257,7 +257,7 @@
       
       <div class="input-container">
         <input type="file" id="imageUpload" accept="image/*" style="display: none;">
-        <button onclick="document.getElementById('imageUpload').click()" aria-label="Upload image">📷</button>
+        <button class="camera-button" onclick="document.getElementById('imageUpload').click()" aria-label="Upload image">📷</button>
         <input type="text" id="userInput" placeholder="Type your message..." aria-label="Type your HVAC question here">
         <button id="sendButton" onclick="handleSend()" aria-label="Send message">Send</button>
         <div class="error-message" id="errorMessage"></div>
