--- a/chat29.html
+++ b/chat29.html
@@ -269,7 +269,7 @@
   <!-- Body content remains unchanged from original -->
   <div class="container">
     <div class="header-container">
-      <h1>🤖 HVAC Assistant</h1>
+      <h1>🤖 HVAC Assistant Pro</h1>
       <button id="micButton" onclick="startVoiceInput()" aria-label="Start voice input">🎙️</button>
     </div>
 
