--- a/chat29.html
+++ b/chat29.html
@@ -278,21 +278,24 @@
         <div class="message ai-message">
          
 
-content: `Hello! I'm your HVAC expert assistant. You can:
+Hello! I'm your HVAC expert assistant. You can:
         <ul>
           <li>Describe issues in plain language</li>
           <li>Upload photos of equipment</li>
           <li>Click headers/questions to follow up</li>
         </ul>
-        How can I help today?`
+        How can I help today?
 
 
 
 
         </div>
       </div>
-      
+
+   
+
       <div class="input-container">
+
         <input type="file" id="imageUpload" accept="image/*" hidden>
         <button onclick="document.getElementById('imageUpload').click()" aria-label="Upload image">📷</button>
         <input type="text" id="userInput" placeholder="Type your message...">
