--- a/chat29.html
+++ b/chat29.html
@@ -65,13 +65,17 @@
 
     button[aria-label="Upload image"] {
       flex-shrink: 0;
-      padding: 10px;
-      min-width: 44px;
-      height: 44px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+  padding: 0px;
+  min-width: 50px;  /* Increased from 44px */
+  height: 50px;     /* Increased from 44px */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 44px;  /* Add this to increase emoji size */
+border-bottom: 20px solid #eee;
+ background: lightgrey;
+
+}
 
     #userInput {
       flex: 1 1 0%;
@@ -177,9 +181,9 @@
 
     #micButton {
       background: #28a745;
-      padding: 10px 16px;
+      padding: 0px 1px;
       border-radius: 25px;
-      font-size: 16px;
+      font-size: 30px;
     }
 
     #apiKey {
@@ -227,7 +231,7 @@
       }
       
       button[aria-label="Upload image"] {
-        min-width: 40px;
+        min-width: 50px;
         height: 40px;
         padding: 8px;
       }
@@ -285,10 +289,6 @@ Hello! I'm your HVAC expert assistant. You can:
           <li>Click headers/questions to follow up</li>
         </ul>
         How can I help today?
-
-
-
-
         </div>
       </div>
 
@@ -494,7 +494,7 @@ function addImageMessage(url) {
   messageDiv.appendChild(container);
 
   document.getElementById('chatHistory').appendChild(messageDiv);
-  return messageDiv;
+ return messageDiv;
 }
 
 function formatResponse(text) {
@@ -571,6 +571,7 @@ function startVoiceInput() {
     recognition.onend = () => {
       isListening = false;
       micButton.innerHTML = '🎙️';
+handleSend();
     };
 
     recognition.onerror = (event) => {
@@ -590,6 +591,13 @@ function startVoiceInput() {
     micButton.innerHTML = '🎙️';
   }
 }
+
+document.getElementById('imageUpload').addEventListener('change', function() {
+  // Only auto-submit if there's no text input
+  if (!document.getElementById('userInput').value.trim()) {
+    handleSend();
+  }
+});
 </script>
 </body>
 </html>
